[package]
name = "multi-mono-font"
version = "0.2.0"
edition = "2021"
authors = ["Merisy-Thing <merisy-thing@outlook.com>"]
description = "Multi mono font mixed typesetting for embedded-graphics"
readme = "README.md"
keywords = ["embedded-graphics", "embedded", "font", "mono-font"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/Merisy-Thing/multi-mono-font"

[dependencies]
embedded-graphics = "0.8.1"

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"

[features]
big-character-size = [] # character width or height big then 255
defmt = []
